--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.19.7",
     "gatsby-background-image": "^0.9.14",
     "gatsby-image": "^2.2.40",
